Removed a min-width property from #topPannelOuter which prevented it from shrinking when the window was resized. Changed the width property in #topPannelInner and #mainSection to a max-width, so that the page could shift naturally when the viewport was resized. Changes made to style.css only.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,13 +49,13 @@ hr {
     border-bottom: solid 2px #cccccc;
     margin-bottom: 30px;
     width: 100%;
-    min-width: 960px;
+    /* min-width: 960px; */
 }
 
 #topPannelInner {
      /* This will create an area of the proper size, centered to contain our header content. */
      /* This element sits within the topPannelOuter. */
-    width: 960px;
+    max-width: 960px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -95,7 +95,7 @@ hr {
     margin: 0px auto;
 
     /* To have our content area total only 960px we use: (960px) - (2 * padding) - (2 * border) */
-    width: 908px; 
+    max-width: 908px; 
     padding: 25px;
 
 }
